@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.54">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.55">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,10 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.54 [20230316]:
-- Added New Setting "Enable Automatic Outro Skip"
-- Added New Setting "Enable Automatic Intro Skip"
-- Recoded Skip Intro
+Changelog 0.3.55 [20230317]:
+- Small Fixes with Playback
     </news>
   </extension>
 </addon>
